tests/react_ref_as_prop_legacy/react_ref_as_prop_legacy.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:27

Cannot resolve name `React`. [cannot-resolve-name]

   1| component RefWithoutReact(ref: any) { // error
                                ^^^


Error ----------------------------------------------------------------------------------------------------- test.js:4:35

Components do not support ref properties [1] within spreads [2] [invalid-component-prop]

   test.js:4:35
   4| declare component SpreadRef(...p: {ref: number}); // error
                                        ^^^^^^^^^^^^^ [2]

References:
   test.js:4:36
   4| declare component SpreadRef(...p: {ref: number}); // error
                                         ^^^ [1]



Found 2 errors
